# HT-MODEL-H

./: .gitignore  .goutputstream-EDIWJ2  .goutputstream-UN64J2  README.md  ik_demo.py  ik_test.py  model_h_leg_ik.cpp  param.txt  walking_demo.py
THMOS_IK_MAKER/: CMakeLists.txt  README.md  ik_speed_compare.py  thmos_leg_ik_raw.cpp
walking_packet/: model_h_kinematics.py  model_h_motors_control.py  thmos_preview_control.py  thmos_spline.py  thmos_step_planner.py  thmos_walk_engine.py
walking_packet/MODEL_H_IK_BUILDER/: CMakeLists.txt  ik_test.py  model_h_leg_ik.cpp
walking_packet/MODEL_H_MOTOR_BUILDER/: CMakeLists.txt  motor_control_test.py
walking_packet/MODEL_H_MOTOR_BUILDER/example/: example.backup  example.cpp  example_read_encoder.backup
walking_packet/MODEL_H_MOTOR_BUILDER/include/: Config.h  Livelybot_Driver.h
walking_packet/MODEL_H_MOTOR_BUILDER/src/: Livelybot_Driver.cpp  Motor_Control.cpp
